--- a/views/socialmediasharing.html
+++ b/views/socialmediasharing.html
@@ -1,4 +1,4 @@
-<div id="social_media_share" align="right">
+<div id="social_media_share" style="float:right; clear:both">
 <span id="twitter">
 <a href="https://twitter.com/share" class="twitter-share-button" data-related="sahanafoss" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
