--- a/views/errors/index.html
+++ b/views/errors/index.html
@@ -13,9 +13,9 @@
             <li>{{=suggest}}</li>
         {{pass}}
         <li>T("Details") - {{=details}}</li>
-        <li>T("You may want to") <a href='http://eden.sahanafoundation.org/report'>T("report a bug")</a> T("about this issue").</li>
+        <li>T("You may want to"."<a href='http://eden.sahanafoundation.org/report'>"."report a bug"."</a>"."about this issue").</li>
         {{ if not res.ticket in (None,'None'): }}
-            <li>T("View ticket for this problem here") - <a href='/{{=app}}/admin/ticket/{{=res.ticket}}' target='_blank'>{{=res.ticket}}</a></li>
+            <li>T("View ticket for this problem here -"."<a href='/{{=app}}/admin/ticket/{{=res.ticket}}' target='_blank'>{{=res.ticket}}</a>")</li>
         {{pass}}
     </ul>
 </div>
