--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -414,9 +414,11 @@ tbody td.criteria-title, tbody th.criteria-title {
     float: right;
     background: #F22;
     margin-right: -5px;
-    margin-top: -9px;
-    padding: 2px;
+    margin-top: -5px;
+    padding: 2px 6px 2px 2px;
     height: 6px;
+    width: 4px;
+    text-align: center;
 }
 
 .note, .note-alpha {
