--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -377,14 +377,6 @@ td.filled ul li a {
     overflow: hidden;
 }
 
-#deletenote {
-    float: right;
-    margin-right: -8px;
-    margin-top: -8px;
-    width: 16px;
-    height: 16px;
-}
-
 #debate, #debate td, #debate th {
     border-style: none;
 }
@@ -407,34 +399,36 @@ tbody td.criteria-title, tbody th.criteria-title {
     height: 10px;
     width: 100%;
     background-color: #867794;
-    margin: -5px -10px 5px -5px;
+    margin: -5px 0px 0px -5px;
 }
 
 .deletenote {
-    float: right;
-    background: #F22;
-    margin-right: -5px;
-    margin-top: -5px;
-    padding: 2px 6px 2px 2px;
-    height: 6px;
-    width: 4px;
-    text-align: center;
+    background: #FFF;
+    border: 1px solid #000;
+    height: 15px;
+    width: 15px;
+    line-height: 15px;
+    padding: -3px 0px 3px 0px;
 }
 
 .note, .note-alpha {
-    background-color: #b9a6cf; /*url('../assets/note.png');*/
+    background-color: #dbdbfb; /*#b9a6cf; /*url('../assets/note.png');*/
     font-size: 0.7em;
     width: 70px;
     height: 70px;
     float: left;
     margin: 5px;
     padding: 5px;
-    -webkit-box-shadow: 0 2px 12px rgba(0,0,0,.5);
-    -moz-box-shadow: 0 2px 12px rgba(0,0,0,.5);
-    box-shadow: 0 1px 2px #000;
+    -webkit-box-shadow: 0 2px 12px rgba(128,128,128,.5);
+    -moz-box-shadow: 0 2px 12px rgba(128,128,128,.5);
+    box-shadow: 0 1px 1px #888;
     /*-webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
     -o-transform: rotate(-2deg);*/
+}
+
+.note-text {
+    font-size: 1em;
 }
 
 .mine {
